# qtstuff

./: CMakeLists.txt  LICENSE  README.md  build-for-linux.sh  build-for-windows-with-static-qt.bat  build-for-windows.bat  credits.txt
.github/workflows/: static-qt-macos.yaml  static-qt-windows.yaml  validate-macos-runner.yaml
build-configs/: qt-static-vcpkg.json  vcpkg-linux.json  vcpkg-macos.json  vcpkg-noqt.json  vcpkg.json
daemon/: CMakeLists.txt  GrpcServer.cpp  GrpcServer.h  config.h  main.cpp
proto/: CMakeLists.txt  stuff.proto
qtclient/: CMakeLists.txt  DataModel.cpp  DataModel.h  main.cpp
qtclient/qml/: Main.qml
scripts/: build-locally-on-mac.sh  build-static-qt.bat  svg2iconset.sh
